--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
+    "dotenv": "^17.2.0",
     "helmet": "^8.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
